--- a/src/main/resources/frontend/dealership-app/src/app/home/home.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <header class="jumbotron">
-    <p>{{ content }}</p>
-  </header>
+  <div *ngFor="let car of cars" >
+    <h1>{{car.modelName}}</h1>
+    <img src="{{car.pictures}}">
+  </div>
 </div>
