--- a/src/main/resources/frontend/dealership-app/src/app/home/home.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/home/home.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div  *ngFor="let car of cars" >
     <h1>{{car.modelName}}</h1>
-    <img src="{{car.pictures}}">
+    <div class="picture-container">
+    <img *ngFor="let picture of car['pictures']" src="{{picture}}">
+    </div>
   </div>
 </div>
