Directory and module refactoring.

--- a/src/main/resources/frontend/dealership-app/src/app/user/login/login.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/login/login.component.html
@@ -5,13 +5,7 @@
       src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
       class="profile-img-card"
     />
-    <form
-      *ngIf="!isLoggedIn"
-      name="form"
-      (ngSubmit)="f.form.valid && onSubmit()"
-      #f="ngForm"
-      novalidate
-    >
+    <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
       <div class="form-group">
         <label for="username">Username</label>
         <input
