--- a/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
@@ -7,7 +7,12 @@
     <li class="nav-item">
       <a href="/profile" class="nav-link" (click)="test($event)">Test </a>
     </li>
+
+    <li class="nav-item" *ngIf="showAdminBoard">
+      <a href="/add" class="nav-link" >New Listing </a>
+    </li>
   </ul>
+
 
   <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
     <li class="nav-item">
@@ -26,4 +31,5 @@
       <a href class="nav-link" (click)="logout()">LogOut</a>
     </li>
   </ul>
+
 </nav>
