--- a/src/main/resources/frontend/dealership-app/src/app/app.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/app.component.html
@@ -1,7 +1,11 @@
 <div id="app">
-  <app-header></app-header>
-    <router-outlet></router-outlet>
-<!--  <div class="container">-->
-<!--  </div>  -->
-  <app-footer></app-footer>
+      <app-header></app-header>
+      <router-outlet></router-outlet>
+      <!--  <div class="container">-->
+      <!--  </div>  -->
+
+        <app-footer class="footer-content"></app-footer>
+
 </div>
+
+
