Add a new Car fully working, with Cloudinary integration. File upload in view -> file uploaded to cloud using Cloudinary fetch API -> secure Url returned and saved as an entity column in Database

--- a/src/main/resources/frontend/dealership-app/src/app/home/home.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div  *ngFor="let car of cars" >
     <h1>{{car.modelName}}</h1>
     <div class="picture-container">
-    <img *ngFor="let picture of car['pictures']" src="{{picture}}">
+    <img  src="{{car.mainImage}}">
     </div>
   </div>
 </div>
