--- a/src/main/resources/frontend/dealership-app/src/app/create/create.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/create/create.component.html
@@ -1,10 +1,9 @@
 <div class="row">
   <div class="col-md-4">
     <section>
-      <form id="account" #f="ngForm" [formGroup]="form" (ngSubmit)="loginOnSubmit(f)">
-        <h4>Login</h4>
+      <form id="account" #f="ngForm" [formGroup]="form" (ngSubmit)="createOnSubmit(f)">
+        <h4>Add a new Listing</h4>
         <hr />
-        <p class="text-danger" *ngIf="incorrectCredentials">Incorrect credentials. Please try again.</p>
         <div class="form-group">
           <label for="modelName">modelName</label>
           <input id="modelName" name="modelName" class="form-control" formControlName="modelName"/>
@@ -70,6 +69,14 @@
           <input id="yearOfProduction" name="yearOfProduction" class="form-control" formControlName="yearOfProduction"/>
           <span class="text-danger" *ngIf="form.get('yearOfProduction').touched && form.get('yearOfProduction').errors?.required">Year of production is required.</span>
         </div>
+
+        <div class="form-group">
+          <label for="mainImage">MainImage</label>
+          <input id="mainImage" name="mainImage" class="form-control" formControlName="mainImage"[(ngModel)]="pictureUrl" type="url" value="{{pictureUrl}}" readonly>
+          <input id="mainImageURL" type="file" name="mainImage" (change)="uploadPhotoToCloud($event)"/>
+          <span class="text-danger" *ngIf="form.get('mainImage').touched && form.get('mainImage').errors?.required">Main image is required.</span>
+        </div>
+
         <div class="form-group">
           <button type="submit" class="btn btn-primary">Submit</button>
         </div>
