Added time of creation and last updated to main entity via JPA Auditor and other small changes.

--- a/src/main/resources/frontend/dealership-app/src/app/home/home.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/home/home.component.html
@@ -1,8 +1,9 @@
 <div class="container">
-  <div  *ngFor="let car of cars" >
+  <h1>Our top picks!</h1>
+  <section  *ngFor="let car of cars" >
     <h1>{{car.modelName}}</h1>
     <div class="picture-container">
-    <img  src="{{car.mainImage}}">
+    <img  src="{{car.mainImage}}" alt="src/main/resources/frontend/dealership-app/src/assets/99776312-error-404-page-not-found-error-with-glitch-effect-on-screen-vector-illustration-for-your-design.jpg">
     </div>
-  </div>
+  </section>
 </div>
