--- a/src/main/resources/frontend/dealership-app/src/app/app.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-header></app-header>
+<!--<app-header></app-header>-->
 
+<!--<app-footer class="footer-content"></app-footer>-->
 <router-outlet></router-outlet>
-<app-footer class="footer-content"></app-footer>
 
