--- a/src/main/resources/frontend/dealership-app/src/app/user/register/register.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/register/register.component.html
@@ -1,80 +1,60 @@
 <div class="col-md-12">
   <div class="card card-container">
     <img
-      id="profile-img"
-      src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
-      class="profile-img-card"
-    />
-    <form
-      *ngIf="!isSuccessful"
-      name="form"
-      (ngSubmit)="f.form.valid && onSubmit()"
-      #f="ngForm"
-      novalidate
-    >
+      id="profile-img" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" class="profile-img-card"/>
+    <form *ngIf="!isSuccessful" name="form" [formGroup]="form" (ngSubmit)="f.form.valid && onSubmit(f)" #f="ngForm" >
       <div class="form-group">
         <label for="username">Username</label>
-        <input
-          id="username"
-          type="text"
-          class="form-control"
-          name="username"
-          [(ngModel)]="form.username"
-          required
-          minlength="3"
-          maxlength="20"
-          #username="ngModel"
-          autocomplete="off"
-        />
-        <div class="alert-danger" *ngIf="username.errors && f.submitted">
-          <div *ngIf="username.errors.required">Username is required</div>
-          <div *ngIf="username.errors.minlength">
+        <input id="username" type="text" class="form-control" name="username"
+               required minlength="4" maxlength="20"  autocomplete="off" formControlName="username"/>
+        <div class="alert-danger" *ngIf="form.get('username')?.errors">
+          <div *ngIf="form.get('username').touched && form.get('username').errors.required">Username is required</div>
+          <div *ngIf="form.get('username').touched && form.get('username').errors.minlength">
             Username must be at least 3 characters
           </div>
-          <div *ngIf="username.errors.maxlength">
+          <div *ngIf="form.get('username')?.errors.maxlength">
             Username must be at most 20 characters
           </div>
         </div>
       </div>
       <div class="form-group">
         <label for="email">Email</label>
-        <input
-          id="email"
-          type="email"
-          class="form-control"
-          name="email"
-          [(ngModel)]="form.email"
-          required
-          email
-          #email="ngModel"
-          autocomplete="off"
-        />
-        <div class="alert-danger" *ngIf="email.errors && f.submitted">
-          <div *ngIf="email.errors.required">Email is required</div>
-          <div *ngIf="email.errors.email">
+        <input id="email" type="email" class="form-control" name="email"
+               required email autocomplete="off" formControlName="email"/>
+        <div class="alert-danger" *ngIf="form.get('email')?.errors">
+          <div *ngIf="form.get('email').touched && form.get('email').errors.required">Email is required</div>
+          <div *ngIf="form.get('email').touched &&form.get('email').errors.email">
             Email must be a valid email address
           </div>
         </div>
       </div>
       <div class="form-group">
         <label for="password">Password</label>
-        <input
-          id="password"
-          type="password"
-          class="form-control"
-          name="password"
-          [(ngModel)]="form.password"
-          required
-          minlength="6"
-          #password="ngModel"
-        />
-        <div class="alert-danger" *ngIf="password.errors && f.submitted">
-          <div *ngIf="password.errors.required">Password is required</div>
-          <div *ngIf="password.errors.minlength">
+        <input id="password" type="password" class="form-control" name="password"
+           required minlength="6" formControlName="password"/>
+        <div class="alert-danger" *ngIf="form.get('password').errors">
+          <div *ngIf="form.get('password').touched && form.get('password').errors.required">Password is required</div>
+          <div *ngIf="form.get('password').touched && form.get('password').errors.minlength">
             Password must be at least 6 characters
           </div>
         </div>
       </div>
+
+      <div class="form-group">
+        <label for="rePassword">Repeat Password</label>
+        <input id="rePassword" type="password" class="form-control" name="rePassword"
+                required minlength="6" formControlName="rePassword"/>
+        <div class="alert-danger" *ngIf="form.get('rePassword').errors">
+          <div *ngIf="form.get('rePassword').touched && form.get('rePassword').errors.required"> Repeat Password is required</div>
+          <div *ngIf="form.get('rePassword').errors.minlength">
+            RePassword must be at least 6 characters
+          </div>
+          <div *ngIf="form.get('rePassword').errors.rePasswordValidator">
+          Passwords don't match!
+        </div>
+        </div>
+      </div>
+
       <div class="form-group">
         <button class="btn btn-primary btn-block">Sign Up</button>
       </div>
