--- a/src/main/resources/frontend/dealership-app/src/app/user/login/login.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/login/login.component.html
@@ -5,7 +5,7 @@
       src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
       class="profile-img-card"
     />
-    <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+    <form *ngIf="!isLoggedIn" name="form" [formGroup]="form" (ngSubmit)="f.form.valid && onSubmit(f)" #f="ngForm" novalidate>
       <div class="form-group">
         <label for="username">Username</label>
         <input
@@ -13,16 +13,18 @@
           type="text"
           class="form-control"
           name="username"
-          [(ngModel)]="form.username"
           required
-          #username="ngModel"
+          formControlName="username"
+          minlength="4"
         />
-        <div
-          class="alert alert-danger"
-          role="alert"
-          *ngIf="username.errors && f.submitted"
-        >
-          Username is required!
+        <div class="alert-danger" *ngIf="form.get('username')?.errors">
+          <div *ngIf="form.get('username').touched && form.get('username').errors.required">Username is required</div>
+          <div *ngIf="form.get('username').touched && form.get('username').errors.minlength">
+            Username must be at least 4 characters
+          </div>
+          <div *ngIf="form.get('username')?.errors.maxlength">
+            Username must be at most 20 characters
+          </div>
         </div>
       </div>
       <div class="form-group">
@@ -32,18 +34,13 @@
           type="password"
           class="form-control"
           name="password"
-          [(ngModel)]="form.password"
           required
           minlength="6"
-          #password="ngModel"
+          formControlName="password"
         />
-        <div
-          class="alert alert-danger"
-          role="alert"
-          *ngIf="password.errors && f.submitted"
-        >
-          <div *ngIf="password.errors.required">Password is required</div>
-          <div *ngIf="password.errors.minlength">
+        <div class="alert-danger" *ngIf="form.get('password')?.errors">
+          <div *ngIf="form.get('password').touched && form.get('password').errors.required">Password</div>
+          <div *ngIf="form.get('password').touched && form.get('password').errors.minlength">
             Password must be at least 6 characters
           </div>
         </div>
@@ -67,5 +64,9 @@
     <div class="alert alert-success" *ngIf="isLoggedIn">
       Logged in as {{ roles }}.
     </div>
+
+    <p>
+      <a href="javascript:void(0)" routerLink="/home">Return Home</a>
+    </p>
   </div>
 </div>
