--- a/src/main/resources/frontend/dealership-app/src/app/user/register/register.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/register/register.component.html
@@ -67,6 +67,10 @@
     <div class="alert alert-success" *ngIf="isSuccessful">
       Your registration is successful!
     </div>
+
+    <p>
+      <a href="javascript:void(0)" routerLink="/home">Return Home</a>
+    </p>
   </div>
 </div>
 
