--- a/src/main/resources/frontend/dealership-app/src/app/core/footer/footer.component.css
+++ b/src/main/resources/frontend/dealership-app/src/app/core/footer/footer.component.css
@@ -1,10 +1,9 @@
 footer {
     background: rgb(38, 38, 56);
-    ;
-    margin-top: 1em;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
+  position:fixed;
+  bottom:0;
+
+  width:100%;
 }
 
 footer p {
