--- a/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
@@ -25,6 +25,9 @@
 
   <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
     <li class="nav-item">
+      <a href="/all" class="nav-link" routerLink="all">All</a>
+    </li>
+    <li class="nav-item">
       <a href="/profile" class="nav-link" routerLink="profile">{{ username }}</a>
     </li>
     <li class="nav-item">
