Some CSS added, more complex email validation and an author column for the Main Entity

--- a/src/main/resources/frontend/dealership-app/src/app/home/home-not-found/home-not-found.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/home/home-not-found/home-not-found.component.html
@@ -1,1 +1,10 @@
-<a href="/login">Please Sign in!</a>
+<section class="main-container">
+  <article class="head-section">
+    <h1>Welcome to Dealership!</h1>
+    <h1>The best place to find the most suitable car for you!</h1>
+  </article>
+  <article class="main-section">
+    <h2>To access our features please register or log in!</h2>
+  </article>
+</section>
+
