--- a/src/main/resources/frontend/dealership-app/src/styles.css
+++ b/src/main/resources/frontend/dealership-app/src/styles.css
@@ -1,7 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 /*global styling for sticky footer*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 html, body, app-root {
   height: 100%;
+  font-family: 'Montserrat',sans-serif;
 }
 
 body {
