--- a/src/main/resources/frontend/dealership-app/src/app/listing/create/create.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/listing/create/create.component.html
@@ -93,6 +93,9 @@
           <span class="text-danger" *ngIf="form.get('thirdImage').touched && form.get('thirdImage').errors?.required">Third image is required.</span>
         </div>
 
+        <div class="form-group text">
+          <input id="author" name="author" class="form-control" formControlName="author" [(ngModel)]="author" value="{{author}}" hidden/>
+        </div>
 
         <div class="form-group">
           <button type="submit" class="btn btn-primary">Submit</button>
