--- a/src/main/resources/frontend/dealership-app/src/app/user/register/register.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/register/register.component.html
@@ -21,7 +21,7 @@
                required email autocomplete="off" formControlName="email"/>
         <div class="alert-danger" *ngIf="form.get('email')?.errors">
           <div *ngIf="form.get('email').touched && form.get('email').errors.required">Email is required</div>
-          <div *ngIf="form.get('email').touched &&form.get('email').errors.email">
+          <div *ngIf="form.get('email').touched &&form.get('email').errors.invalidEmail">
             Email must be a valid email address
           </div>
         </div>
