--- a/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
@@ -1,20 +1,29 @@
 <nav class="navbar navbar-expand navbar-dark bg-dark">
-  <a href="#" class="navbar-brand">Dealership</a>
+  <a href="home" class="navbar-brand">Dealership</a>
   <ul class="navbar-nav mr-auto" routerLinkActive="active">
     <li class="nav-item">
       <a href="/home" class="nav-link" >Home </a>
     </li>
-    <li class="nav-item">
-      <a href="/profile" class="nav-link" (click)="test($event)">Test </a>
-    </li>
+<!--    <li class="nav-item">-->
+<!--      <a href="/profile" class="nav-link" (click)="test($event)">Test </a>-->
+<!--    </li>-->
 
-    <li class="nav-item" *ngIf="showAdminBoard">
+    <li class="nav-item" *ngIf="isLoggedIn">
       <a href="/add"  class="nav-link" >New Listing </a>
     </li>
-
-    <li class="nav-item" *ngIf="componentName != 'AboutComponent'">
-      <a href="/home/about"  class="nav-link" >About Us</a>
+    <li class="nav-item" *ngIf="isLoggedIn">
+      <a href="/all" class="nav-link" >Catalogue</a>
     </li>
+    <li class="nav-item">
+      <a href="/home/about"   class="nav-link" >Locations</a>
+    </li>
+    <li class="nav-item">
+      <a href="/home/about"   class="nav-link" >Reviews</a>
+    </li>
+    <li class="nav-item">
+      <a href="/home/about"   class="nav-link" >About Us</a>
+    </li>
+
   </ul>
 
 
@@ -28,9 +37,6 @@
   </ul>
 
   <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
-    <li class="nav-item">
-      <a href="/all" class="nav-link" >All</a>
-    </li>
     <li class="nav-item">
       <a href="/profile" class="nav-link" >{{ username }}</a>
     </li>
