--- a/src/main/resources/frontend/dealership-app/src/app/listing/listing-item/listing-item.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/listing/listing-item/listing-item.component.html
@@ -13,4 +13,7 @@
       </div>
     </div>
   </div>
+<!--  <div *ngFor="let picture of pictures">-->
+<!--    <img src="{{picture.url}}">-->
+<!--  </div>-->
 </div>
