--- a/src/main/resources/frontend/dealership-app/src/app/listing/create/create.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/listing/create/create.component.html
@@ -1,6 +1,6 @@
 <div class="form-container">
     <section>
-      <form id="account" #f="ngForm" [formGroup]="form" (ngSubmit)="createOnSubmit(f)">
+      <form id="account" #f="ngForm" [formGroup]="form" (ngSubmit)=" f.form.valid && createOnSubmit(f)">
         <h1>Add a new Listing</h1>
         <p class="return-home">
           <a href="javascript:void(0)" routerLink="/home">Return Home</a>
@@ -74,21 +74,21 @@
 
         <div class="form-group text">
           <label for="mainImage">Main Image</label>
-          <input id="mainImage" name="mainImage" class="form-control" formControlName="mainImage"[(ngModel)]="pictureUrl" type="url" value="{{pictureUrl}}" readonly>
-          <input id="mainImageURL" type="file" name="mainImage" (change)="uploadPhotoToCloud($event)" />
+          <input id="mainImage" name="mainImage" class="form-control" formControlName="mainImage" [(ngModel)]="pictureUrl" type="url" value="{{pictureUrl}}" readonly>
+          <input id="mainImageURL" type="file" name="mainImage" (change)="uploadMainPhotoToCloud($event)" />
           <span class="text-danger" *ngIf="form.get('mainImage').touched && form.get('mainImage').errors?.required">Main image is required.</span>
         </div>
 
         <div class="form-group img">
           <label for="secondImage">Second Image</label>
-          <input id="secondImage" name="secondImage" class="form-control" formControlName="secondImage"[(ngModel)]="secondPicture" type="url" value="{{secondPicture}}" readonly>
+          <input id="secondImage" name="secondImage" class="form-control" formControlName="secondImage" [(ngModel)]="secondPicture" type="url" value="{{secondPicture}}" readonly>
           <input id="secondImageURL" type="file" name="secondImage" (change)="uploadSecondPhotoToCloud($event)" />
           <span class="text-danger" *ngIf="form.get('secondImage').touched && form.get('secondImage').errors?.required">Second image is required.</span>
         </div>
 
         <div class="form-group img">
           <label for="thirdImage">Third Image</label>
-          <input id="thirdImage" name="thirdImage" class="form-control" formControlName="thirdImage"[(ngModel)]="thirdPicture" type="url" value="{{thirdPicture}}" readonly>
+          <input id="thirdImage" name="thirdImage" class="form-control" formControlName="thirdImage" [(ngModel)]="thirdPicture" type="url" value="{{thirdPicture}}" readonly>
           <input id="thirdImageURL" type="file" name="thirdImage" (change)="uploadThirdPhotoToCloud($event)" />
           <span class="text-danger" *ngIf="form.get('thirdImage').touched && form.get('thirdImage').errors?.required">Third image is required.</span>
         </div>
