--- a/src/main/resources/frontend/dealership-app/src/app/listing/listing-item/listing-item.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/listing/listing-item/listing-item.component.html
@@ -10,124 +10,14 @@
           <a href="#" class="btn mr-2"><i class="fas fa-link"></i> Visit Site</a>
           <a href="#" class="btn "><i class="fab fa-github"></i> Github</a>
           <button *ngIf="isAuthor" class="btn " (click)="onDelete(car.id)"><i class="fab fa-github"></i> Delete</button>
-          <button  class="btn btn-lg btn-outline-primary" (click)="open(content, car)">Update</button>
+          <button *ngIf="isAuthor" class="btn btn-lg btn-outline-primary" (click)="open(content, car)">Update</button>
         </div>
       </div>
     </div>
   </div>
-<!--  <div *ngFor="let picture of pictures">-->
-<!--    <img src="{{picture.url}}">-->
-<!--  </div>-->
 </div>
 
-
-<!-- UPDATE MODAL -->
-<!--<ng-template>-->
-<!--  <div class="modal-header">-->
-<!--    <h4 class="modal-title" id="modal-basic-title">Listing Update</h4>-->
-<!--  </div>-->
-<!--  <div class="modal-body">-->
-<!--    <form id="account" #f="ngForm" [formGroup]="updateForm" (ngSubmit)="f.form.valid && onUpdateEmloyee(car)">-->
-<!--      <hr />-->
-<!--      <div class="form-group text">-->
-<!--        <label for="modelName">Model Name</label>-->
-<!--        <input id="modelName" name="modelName" class="form-control" formControlName="modelName" [(ngModel)]="modelName"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('modelName').touched && updateForm.get('modelName').errors?.required">Name of the model is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="brand">Brand</label>-->
-<!--        <input id="brand" name="brand" class="form-control" formControlName="brand" [(ngModel)]="brand"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('brand').touched && updateForm.get('brand').errors?.required">Brand is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="type">Type</label>-->
-<!--        <input id="type" name="type" class="form-control" formControlName="type" [(ngModel)]="type"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('type').touched && updateForm.get('type').errors?.required">Type is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="power">Power</label>-->
-<!--        <input id="power" name="power" class="form-control" formControlName="power" [(ngModel)]="power"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('power').touched && updateForm.get('power').errors?.required">Power is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="topSpeed">Top Speed</label>-->
-<!--        <input id="topSpeed" name="topSpeed" class="form-control" formControlName="topSpeed" [(ngModel)]="topSpeed"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('topSpeed').touched && updateForm.get('topSpeed').errors?.required">Top speed is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="torque">Torque</label>-->
-<!--        <input id="torque" name="torque" class="form-control" formControlName="torque" [(ngModel)]="torque"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('torque').touched && updateForm.get('torque').errors?.required">Torque is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="fuelCapacity">Fuel Capacity</label>-->
-<!--        <input id="fuelCapacity" name="fuelCapacity" class="form-control" formControlName="fuelCapacity" [(ngModel)]="fuelCapacity"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('fuelCapacity').touched && updateForm.get('fuelCapacity').errors?.required">Fuel capacity is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="weight">Weight</label>-->
-<!--        <input id="weight" name="weight" class="form-control" formControlName="weight" [(ngModel)]="weight"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('weight').touched && updateForm.get('weight').errors?.required">Weight is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="fuelType">Fuel Type</label>-->
-<!--        <input id="fuelType" name="fuelType" class="form-control" formControlName="fuelType" [(ngModel)]="fuelType"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('fuelType').touched && updateForm.get('fuelType').errors?.required">Fuel type is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="transmission">Transmission</label>-->
-<!--        <input id="transmission" name="transmission" class="form-control" formControlName="transmission" [(ngModel)]="transmission"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('transmission').touched && updateForm.get('transmission').errors?.required">Transmission is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="drivetrain">Drivetrain</label>-->
-<!--        <input id="drivetrain" name="drivetrain" class="form-control" formControlName="drivetrain" [(ngModel)]="drivetrain"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('drivetrain').touched && updateForm.get('drivetrain').errors?.required">Drivetrain is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="price">Price</label>-->
-<!--        <input id="price" name="price" class="form-control" formControlName="price" [(ngModel)]="price"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('price').touched && updateForm.get('price').errors?.required">Price is required.</span>-->
-<!--      </div>-->
-<!--      <div class="form-group text">-->
-<!--        <label for="yearOfProduction">Year of production</label>-->
-<!--        <input id="yearOfProduction" name="yearOfProduction" class="form-control" formControlName="yearOfProduction" [(ngModel)]="yearOfProduction"/>-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('yearOfProduction').touched && updateForm.get('yearOfProduction').errors?.required">Year of production is required.</span>-->
-<!--      </div>-->
-
-<!--      <div class="form-group text">-->
-<!--        <label for="mainImage">Main Image</label>-->
-<!--        <input id="mainImage" name="mainImage" class="form-control" type="url" formControlName="mainImage" [(ngModel)]="pictureUrl" readonly>-->
-<!--        <input id="mainImageURL" type="file" name="mainImage" (change)="uploadMainPhotoToCloud($event)" />-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('mainImage').touched && updateForm.get('mainImage').errors?.required">Main image is required.</span>-->
-<!--      </div>-->
-
-<!--      <div class="form-group img">-->
-<!--        <label for="secondImage">Second Image</label>-->
-<!--        <input id="secondImage" name="secondImage" class="form-control" formControlName="secondImage" [(ngModel)]="secondImage"  type="url" readonly>-->
-<!--        <input id="secondImageURL" type="file" name="secondImage" (change)="uploadSecondPhotoToCloud($event)" />-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('secondImage').touched && updateForm.get('secondImage').errors?.required">Second image is required.</span>-->
-<!--      </div>-->
-
-<!--      <div class="form-group img">-->
-<!--        <label for="thirdImage">Third Image</label>-->
-<!--        <input id="thirdImage" name="thirdImage" class="form-control" formControlName="thirdImage" [(ngModel)]="thirdImage"  type="url" readonly>-->
-<!--        <input id="thirdImageURL" type="file" name="thirdImage" (change)="uploadThirdPhotoToCloud($event)" />-->
-<!--        <span class="text-danger" *ngIf="updateForm.get('thirdImage').touched && updateForm.get('thirdImage').errors?.required">Third image is required.</span>-->
-<!--      </div>-->
-
-<!--      <div class="form-group text">-->
-<!--        <input id="author" name="author" class="form-control" formControlName="author" [(ngModel)]="author"  value="{{author}}" hidden/>-->
-<!--      </div>-->
-
-
-<!--      <div class="form-group">-->
-<!--        <button type="submit" class="btn btn-primary">Submit</button>-->
-<!--      </div>-->
-<!--    </form>-->
-<!--  </div>-->
-<!--</ng-template>-->
-
+<!--EDIT MODAL-->
 <ng-template #content let-modal>
   <div class="modal-header">
     <h5 class="modal-title" id="update-car-modal">Edit Listing {{modelName}}</h5>
@@ -136,7 +26,7 @@
     </button>
   </div>
   <div class="modal-body">
-    <form #editForm="ngForm" [formGroup]="updateForm" (ngSubmit)="editForm.form.valid && onUpdateCar(editCar)">
+    <form #editForm="ngForm" [formGroup]="updateForm" (ngSubmit)="editForm.form.valid">
               <hr />
               <div class="form-group text">
                 <label for="modelName">Model Name</label>
@@ -152,56 +42,70 @@
                 <label for="type">Type</label>
                 <input id="type" name="type" class="form-control" formControlName="type" [(ngModel)]="editCar.type"/>
                 <span class="text-danger" *ngIf="updateForm.get('type').touched && updateForm.get('type').errors?.required">Type is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('type').touched && updateForm.get('type').errors?.invalidType">Type must be one of the following:
+             SUV, Sedan, Hatchback, Coupe, Truck or Smart!</span>
               </div>
               <div class="form-group text">
                 <label for="power">Power</label>
-                <input id="power" name="power" class="form-control" formControlName="power" [(ngModel)]="editCar.power"/>
+                <input id="power" type="number" name="power" class="form-control" formControlName="power" [(ngModel)]="editCar.power"/>
                 <span class="text-danger" *ngIf="updateForm.get('power').touched && updateForm.get('power').errors?.required">Power is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('power').touched && updateForm.get('power').errors?.min">Power must be at least 50 Hp!</span>
               </div>
               <div class="form-group text">
                 <label for="topSpeed">Top Speed</label>
-                <input id="topSpeed" name="topSpeed" class="form-control" formControlName="topSpeed" [(ngModel)]="editCar.topSpeed"/>
+                <input id="topSpeed" type="number" name="topSpeed" class="form-control" formControlName="topSpeed" [(ngModel)]="editCar.topSpeed"/>
                 <span class="text-danger" *ngIf="updateForm.get('topSpeed').touched && updateForm.get('topSpeed').errors?.required">Top speed is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('topSpeed').touched && updateForm.get('topSpeed').errors?.min">Top speed must be at least 60 Kmh!</span>
               </div>
               <div class="form-group text">
                 <label for="torque">Torque</label>
-                <input id="torque" name="torque" class="form-control" formControlName="torque" [(ngModel)]="editCar.torque"/>
+                <input id="torque" type="number" name="torque" class="form-control" formControlName="torque" [(ngModel)]="editCar.torque"/>
                 <span class="text-danger" *ngIf="updateForm.get('torque').touched && updateForm.get('torque').errors?.required">Torque is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('torque').touched && updateForm.get('torque').errors?.min">Torque must be at least 100 Nm</span>
               </div>
               <div class="form-group text">
                 <label for="fuelCapacity">Fuel Capacity</label>
-                <input id="fuelCapacity" name="fuelCapacity" class="form-control" formControlName="fuelCapacity" [(ngModel)]="editCar.fuelCapacity"/>
+                <input id="fuelCapacity" type="number" name="fuelCapacity" class="form-control" formControlName="fuelCapacity" [(ngModel)]="editCar.fuelCapacity"/>
                 <span class="text-danger" *ngIf="updateForm.get('fuelCapacity').touched && updateForm.get('fuelCapacity').errors?.required">Fuel capacity is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('fuelCapacity').touched && updateForm.get('fuelCapacity').errors?.min">Fuel capacity must be at least 20 litres!</span>
               </div>
               <div class="form-group text">
                 <label for="weight">Weight</label>
-                <input id="weight" name="weight" class="form-control" formControlName="weight" [(ngModel)]="editCar.weight"/>
+                <input id="weight" type="number" name="weight" class="form-control" formControlName="weight" [(ngModel)]="editCar.weight"/>
                 <span class="text-danger" *ngIf="updateForm.get('weight').touched && updateForm.get('weight').errors?.required">Weight is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('weight').touched && updateForm.get('weight').errors?.min">Weight must be at least 1000 kg!</span>
               </div>
               <div class="form-group text">
                 <label for="fuelType">Fuel Type</label>
                 <input id="fuelType" name="fuelType" class="form-control" formControlName="fuelType" [(ngModel)]="editCar.fuelType"/>
                 <span class="text-danger" *ngIf="updateForm.get('fuelType').touched && updateForm.get('fuelType').errors?.required">Fuel type is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('fuelType').touched && updateForm.get('fuelType').errors?.invalidFuelType">Fuel type must be one of the following:
+             Petrol, Diesel or Hybrid!</span>
               </div>
               <div class="form-group text">
                 <label for="transmission">Transmission</label>
                 <input id="transmission" name="transmission" class="form-control" formControlName="transmission" [(ngModel)]="editCar.transmission"/>
                 <span class="text-danger" *ngIf="updateForm.get('transmission').touched && updateForm.get('transmission').errors?.required">Transmission is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('transmission').touched && updateForm.get('transmission').errors?.invalidTransmission">Transmission must be Automatic or Manual.</span>
               </div>
               <div class="form-group text">
                 <label for="drivetrain">Drivetrain</label>
                 <input id="drivetrain" name="drivetrain" class="form-control" formControlName="drivetrain" [(ngModel)]="editCar.drivetrain"/>
                 <span class="text-danger" *ngIf="updateForm.get('drivetrain').touched && updateForm.get('drivetrain').errors?.required">Drivetrain is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('drivetrain').touched && updateForm.get('drivetrain').errors?.invalidDrivetrain">Drivetrain must be one of the following:
+            AWD, RWD or FWD.</span>
               </div>
               <div class="form-group text">
                 <label for="price">Price</label>
-                <input id="price" name="price" class="form-control" formControlName="price" [(ngModel)]="editCar.price"/>
+                <input id="price" name="price" type="number" class="form-control" formControlName="price" [(ngModel)]="editCar.price"/>
                 <span class="text-danger" *ngIf="updateForm.get('price').touched && updateForm.get('price').errors?.required">Price is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('price').touched && updateForm.get('price').errors?.min">Price must be above 500$!</span>
               </div>
               <div class="form-group text">
                 <label for="yearOfProduction">Year of production</label>
-                <input id="yearOfProduction" name="yearOfProduction" class="form-control" formControlName="yearOfProduction" [(ngModel)]="editCar.yearOfProduction"/>
+                <input id="yearOfProduction" type="number" name="yearOfProduction" class="form-control" formControlName="yearOfProduction" [(ngModel)]="editCar.yearOfProduction"/>
                 <span class="text-danger" *ngIf="updateForm.get('yearOfProduction').touched && updateForm.get('yearOfProduction').errors?.required">Year of production is required.</span>
+                <span class="text-danger" *ngIf="updateForm.get('yearOfProduction').touched && updateForm.get('yearOfProduction').errors?.min">Year of production must be after 1990!</span>
               </div>
 
               <div class="form-group text">
@@ -226,12 +130,12 @@
               </div>
 
               <div class="form-group text">
-                <input id="author" name="author" class="form-control" formControlName="author" [(ngModel)]="editCar.author" hidden/>
+                <input id="author" name="author" class="form-control" formControlName="author" [(ngModel)]="editCar.author" readonly hidden/>
               </div>
 
 
               <div class="form-group">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary" (click)="onUpdateCar(editCar); modal.dismiss('Submit')">Submit</button>
               </div>
     </form>
   </div>
