--- a/src/main/resources/frontend/dealership-app/src/app/user/profile/profile.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/profile/profile.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container" *ngIf="currentUser; else loggedOut">
   <header class="jumbotron">
     <h3>
@@ -21,6 +22,14 @@
   </ul>
 </div>
 
+<section>
+  <h2>My Listings: </h2>
+  <article *ngFor="let car of cars">
+    <h1>{{car.modelName}}</h1>
+  </article>
+</section>
+
 <ng-template #loggedOut>
   Please login.
 </ng-template>
+<app-footer></app-footer>
