Added reviews functionality, location to the back-end and other refactorings.

--- a/src/main/resources/frontend/dealership-app/src/app/home/about/about.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/home/about/about.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <div class="container">
   <header class="section-header text-center mb-5 pb-2">
-    <h3>About Us</h3>
+    <h2>About Us</h2>
     <p>We are Iris! A team of designers, developers and digital markerters in the HNG6.0 Internship. Launched in
       September 2019, Iris Goal Tracker App is the first product released by Team Iris. As Mark Victor Hansen said "By
       recording your dreams and goals, you set in motion the process of becoming the person you most want to be..."
@@ -57,10 +57,10 @@
     ============================-->
     <section id="call-to-action" class="wow fadeIn">
       <div class="container text-center">
-        <h3>Having Problems keeping track on your goals?</h3>
+        <h3>Having troubles finding the best car for you?</h3>
         <p class="text-center">
-          With Iris Goal Tracker you can set and track your goals, track time, manage task, and lots more. </p>
-        <a class="cta-btn" href="/register">Get Started</a>
+          With Dealership you can select from our available cars, see user reviews or upload a listing yourself!. </p>
+        <a class="cta-btn" href="/register">Register now!</a>
       </div>
     </section><!-- #call-to-action -->
 </header>
