--- a/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/core/header/header.component.html
@@ -17,7 +17,7 @@
     <li class="nav-item">
       <a href="/locations"   class="nav-link" >Locations</a>
     </li>
-    <li class="nav-item">
+    <li class="nav-item" *ngIf="isLoggedIn">
       <a href="/reviews"   class="nav-link" >Reviews</a>
     </li>
     <li class="nav-item">
