--- a/src/main/resources/frontend/dealership-app/src/app/listing/listing-item/listing-item.component.css
+++ b/src/main/resources/frontend/dealership-app/src/app/listing/listing-item/listing-item.component.css
@@ -1,27 +1,10 @@
-/*img {*/
-/*  width: 300px;*/
-/*  height: 200px;*/
-/*}*/
+
 
 .container {
   display: flex;
   flex-direction: column;
 }
 
-/*  padding: 0;*/
-/*}*/
-
-/*section {*/
-/*  align-content: center;*/
-/*}*/
-
-/*.picture-container {*/
-/*  display: flex;*/
-/*  flex-direction: column;*/
-/*}*/
-:root {
-  --gradient: linear-gradient(to left top, #DD2476 10%, #FF512F 90%) !important;
-}
 
 body {
   background: #111 !important;
@@ -32,24 +15,25 @@ body {
   border: 1px solid #dd2476;
   color: rgba(250, 250, 250, 0.8);
   margin-bottom: 2rem;
+
 }
 
 .btn {
   border: 5px solid;
   border-image-slice: 1;
-  background: var(--gradient) !important;
-  -webkit-background-clip: text !important;
-  -webkit-text-fill-color: transparent !important;
-  border-image-source: var(--gradient) !important;
   text-decoration: none;
   transition: all .4s ease;
+  color: white;
 }
 
 .btn:hover, .btn:focus {
-  background: var(--gradient) !important;
   -webkit-background-clip: text !important;
   -webkit-text-fill-color: #fff !important;
   border: 5px solid #fff !important;
   box-shadow: #222 1px 0 10px;
   text-decoration: underline;
+}
+
+.card-img-top {
+  height: 200px;
 }
