--- a/src/main/resources/frontend/dealership-app/src/app/locations/location/location.component.css
+++ b/src/main/resources/frontend/dealership-app/src/app/locations/location/location.component.css
@@ -1,3 +1,45 @@
 agm-map {
-  height: 400px;
+  height: 600px;
+  /*width: 85%;*/
 }
+
+.map-div {
+  width: 85%;
+  height: 600px;
+  text-align:center;
+  margin: auto;
+
+}
+
+.select-header {
+  text-align:  center;
+}
+
+
+select {
+  display: block;
+  margin: 0 auto;
+}
+
+/*.split {*/
+/*  height: 100%;*/
+/*  width: 50%;*/
+/*  position: fixed;*/
+/*  !*z-index: 1;*!*/
+/*  !*top: 0;*!*/
+/*  !*overflow-x: hidden;*!*/
+
+/*}*/
+
+/* Control the left side */
+/*.left {*/
+/*  left: 0;*/
+/*  text-align: center;*/
+/*}*/
+
+/*!* Control the right side *!*/
+/*.right {*/
+/*  right: 0;*/
+/*  text-align: center;*/
+/*  padding: 0;*/
+/*}*/
