Quick update on Ilocation front-end interface and delete functionality added.

--- a/src/main/resources/frontend/dealership-app/src/app/locations/location-item/location-item.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/locations/location-item/location-item.component.html
@@ -1,4 +1,4 @@
 <article>
   <div class="text">{{location.address}}</div>
-<!--  <button *ngIf="review.author === currentUser" (click)="onDelete(review.id)">Delete Review</button>-->
+  <button *ngIf="isAdmin" (click)="onDelete(location.id)">Delete Review</button>
 </article>
