--- a/src/main/resources/frontend/dealership-app/src/app/reviews/review-item/review-item.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/reviews/review-item/review-item.component.html
@@ -1,4 +1,5 @@
 <article>
+  <h4>{{car?.modelName}}</h4>
 <div class="text">{{review.text}}</div>
   <p>Created by: {{review.author}}</p>
   <P>Time of upload: {{review.timeOfCreation}}</P>
