--- a/src/main/resources/frontend/dealership-app/src/app/user/profile/profile.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/profile/profile.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container" *ngIf="currentUser; else loggedOut">
+<div class="container" *ngIf="currentUser">
   <header class="jumbotron">
     <h3>
       <strong>{{ currentUser.username }}</strong> Profile
@@ -22,14 +22,22 @@
   </ul>
 </div>
 
-<section>
+<section *ngIf="carLength !== 0">
   <h2>My Listings: </h2>
-  <article *ngFor="let car of cars">
-    <h1>{{car.modelName}}</h1>
-  </article>
+  <app-listing-item *ngFor="let car of cars" [car] = "car"></app-listing-item>
 </section>
 
-<ng-template #loggedOut>
-  Please login.
-</ng-template>
+<section *ngIf="carLength === 0">
+  <h2>You have no listings!</h2>
+</section>
+
+<section *ngIf="reviewLength !== 0">
+  <h2>My reviews: </h2>
+  <app-review-item *ngFor="let review of reviews" [review]="review" [carId]="review.car_id"></app-review-item>
+</section>
+
+<section *ngIf="reviewLength === 0">
+  <h2>You have no reviews!</h2>
+</section>
+
 <app-footer></app-footer>
