--- a/src/main/resources/frontend/dealership-app/src/styles.css
+++ b/src/main/resources/frontend/dealership-app/src/styles.css
@@ -2,11 +2,16 @@
 /*global styling for sticky footer*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
 html, body, app-root {
-  height: 100%;
   font-family: 'Montserrat',sans-serif;
 }
 
+
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
-  margin-bottom: 0;
-  margin-top: 0;
+  margin: 0 0 100px;
+
 }
