Styling added to some of the components.

--- a/src/main/resources/frontend/dealership-app/src/app/home/about/about.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/home/about/about.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
 <div class="container">
   <header class="section-header text-center mb-5 pb-2">
-    <h2>About Us</h2>
-    <p>We are Iris! A team of designers, developers and digital markerters in the HNG6.0 Internship. Launched in
+    <h1>About Us</h1>
+    <h4>We are Iris! A team of designers, developers and digital markerters in the HNG6.0 Internship. Launched in
       September 2019, Iris Goal Tracker App is the first product released by Team Iris. As Mark Victor Hansen said "By
-      recording your dreams and goals, you set in motion the process of becoming the person you most want to be..."
+      recording your dreams and goals, you set in motion the process of becoming the person you most want to be...</h4>
 
     <div class="row about-cols">
 
@@ -64,4 +64,5 @@
       </div>
     </section><!-- #call-to-action -->
 </header>
+</div>
 <app-footer></app-footer>
