--- a/src/main/resources/frontend/dealership-app/src/app/user/register/register.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/register/register.component.html
@@ -62,7 +62,7 @@
       </div>
     </form>
     <p>
-      <a href="javascript:void(0)" routerLink="/home">Return Home</a>
+      <button (click)="back()">Return</button>
     </p>
   </div>
 </div>
