--- a/src/main/resources/frontend/dealership-app/src/app/home/about/about.component.css
+++ b/src/main/resources/frontend/dealership-app/src/app/home/about/about.component.css
@@ -1,5 +1,4 @@
 #about {
-
   padding: 60px 0 40px 0;
   position: relative;
 }
@@ -15,9 +14,10 @@
   z-index: 9;
 }
 
-#about .container {
+.container {
   position: relative;
   z-index: 10;
+  margin-top: 30px;
 }
 
 #about .about-col {
@@ -140,6 +140,5 @@ app-footer{
   left: 0;
   position:fixed;
   bottom:0px;
-  background-color:pink;
   width:100%;
 }
