--- a/src/main/resources/frontend/dealership-app/src/app/listing/listing-item/listing-item.component.css
+++ b/src/main/resources/frontend/dealership-app/src/app/listing/listing-item/listing-item.component.css
@@ -1,8 +1,8 @@
 
 
 .container {
-  display: flex;
-  flex-direction: column;
+  display: inline-block;
+
 }
 
 
@@ -12,9 +12,11 @@ body {
 
 .card {
   background: #222;
-  border: 1px solid #dd2476;
+  border: 1px solid #041f03;
   color: rgba(250, 250, 250, 0.8);
-  margin-bottom: 2rem;
+  margin-bottom: 0;
+  display: inline-block;
+  width: 100%;
 
 }
 
@@ -27,8 +29,6 @@ body {
 }
 
 .btn:hover, .btn:focus {
-  -webkit-background-clip: text !important;
-  -webkit-text-fill-color: #fff !important;
   border: 5px solid #fff !important;
   box-shadow: #222 1px 0 10px;
   text-decoration: underline;
@@ -36,4 +36,9 @@ body {
 
 .card-img-top {
   height: 200px;
+}
+
+div.row {
+  /*align-content: center;*/
+  /*justify-content: center;*/
 }
