--- a/src/main/resources/frontend/dealership-app/src/app/user/login/login.component.html
+++ b/src/main/resources/frontend/dealership-app/src/app/user/login/login.component.html
@@ -66,7 +66,7 @@
     </div>
 
     <p>
-      <a href="javascript:void(0)" routerLink="/home">Return Home</a>
+      <button (click)="back()">Return</button>
     </p>
   </div>
 </div>
